--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,10 @@
 {
   "name": "frontend",
-  "proxy": "http://127.0.0.1:5000",
+  "proxy": "http://192.168.1.107:5000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^1.0.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^5.11.4",
@@ -12,6 +13,7 @@
     "axios": "^0.21.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.10.0",
     "react-loader-spinner": "^3.1.14",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
@@ -21,7 +23,8 @@
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0",
     "styled-icons": "^10.22.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
